# temoto_context_manager

./: .gitmodules  CMakeLists.txt  README.md
actions/.tmp/ta_find_objects/: descriptor.xml  package.xml
actions/.tmp/ta_link_components_emr/: CMakeLists.txt
actions/.tmp/ta_link_components_emr/src/: ta_link_components_emr.cpp
actions/.tmp/ta_track_artag/: CMakeLists.txt  descriptor.xml  package.xml
actions/.tmp/ta_track_artag/src/: ta_track_artag.cpp
actions/.tmp/ta_track_localization/: descriptor.xml
actions/ta_emr_component_linker/: CMakeLists.txt  package.xml  umrf.json
actions/ta_emr_component_linker/include/ta_emr_component_linker/: macros.h  temoto_action.h
actions/ta_emr_component_linker/launch/: action_test_separate.launch  action_test_standalone.launch
actions/ta_emr_component_linker/src/: ta_emr_component_linker.cpp
actions/ta_emr_component_linker/test/: invoker_umrf.json
actions/ta_find_objects/: CMakeLists.txt
actions/ta_find_objects/src/: ta_find_objects.cpp
actions/ta_link_components_emr/: descriptor.xml  package.xml
actions/ta_link_components_emr/src/: ta_link_components_emr.cpp
actions/ta_track_artag/: CMakeLists.txt  descriptor.xml
actions/ta_track_artag/src/: ta_track_artag.cpp
actions/ta_track_localization/: CMakeLists.txt  package.xml
actions/ta_track_localization/src/: ta_track_localization.cpp
examples/: set_emr_items.cpp  visualize_emr_items.cpp
examples/launch/: emr_item_config.rviz  emr_item_visualizer.launch
include/temoto_context_manager/: context_manager.h  context_manager_containers.h  context_manager_interface.h  context_manager_services.h  emr_ros_interface.h  env_model_repository.h
msg/: ComponentContainer.msg  MapContainer.msg  ObjectContainer.msg  RobotContainer.msg
src/: context_manager.cpp  context_manager_node.cpp  emr_ros_interface.cpp  env_model_repository.cpp
srv/: RemoveItem.srv
temoto_context_manager/: CMakeLists.txt  package.xml
temoto_context_manager/config/: action_dst.yaml
temoto_context_manager/include/temoto_context_manager/: EMR_ROS_interface.h  context_manager.h  context_manager_containers.h  context_manager_interface.h  context_manager_services.h  emr_item_to_component_link.h  emr_ros_interface.h  env_model_interface.h  env_model_repository.h  tracking_method.h
temoto_context_manager/launch/: action_assistant.launch
temoto_context_manager/msg/: ComponentContainer.msg  ItemContainer.msg  MapContainer.msg  NodeContainer.msg  ObjectContainer.msg  RobotContainer.msg
temoto_context_manager/src/: EMR_ROS_interface.cpp  context_manager.cpp  context_manager_containers.cpp  context_manager_node.cpp  emr_item_to_component_link.cpp  emr_ros_interface.cpp  env_model_repository.cpp
temoto_context_manager/srv/: GetEMRItem.srv  GetEMRNode.srv  GetEMRNodes.srv  GetEMRVector.srv  GetNumber.srv  TrackItem.srv  TrackObject.srv  UpdateEMR.srv  UpdateEmr.srv
