<?xml version="1.0"?>
<package format="2">
  <name>temoto_context_manager</name>
  <version>0.0.0</version>
  <description>The temoto_context_manager package</description>

  <maintainer email="robert.valner@ut.ee">Robert Valner</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>temoto_component_manager</build_depend>
  <build_depend>temoto_core</build_depend>
  <build_depend>temoto_er_manager</build_depend>
  <build_depend>temoto_nlp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>temoto_component_manager</build_export_depend>
  <build_export_depend>temoto_core</build_export_depend>
  <build_export_depend>temoto_er_manager</build_export_depend>
  <build_export_depend>temoto_nlp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>temoto_component_manager</exec_depend>
  <exec_depend>temoto_core</exec_depend>
  <exec_depend>temoto_er_manager</exec_depend>
  <exec_depend>temoto_nlp</exec_depend>

</package>
