<?xml version="1.0"?>
<package format="2">
  <name>ta_link_components_emr</name>
  <version>0.0.0</version>
  <description>The ta_link_components_emr package</description>
  
  <maintainer email="robert.valner@ut.ee">Robert Valner</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>>
  <build_depend>rospy</build_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>temoto_core</build_depend>
  <build_depend>temoto_nlp</build_depend>
  <build_depend>temoto_component_manager</build_depend>
  <build_depend>temoto_context_manager</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>class_loader</exec_depend>
  <exec_depend>temoto_core</exec_depend>
  <exec_depend>temoto_nlp</exec_depend>
  <exec_depend>temoto_component_manager</exec_depend>
  <exec_depend>temoto_context_manager</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>